--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3"
 volumes:
-  mysql_8_0-data:
-  redis-data:
-  vendor_bundle_2_5_1:
-  vendor_assets_2_7:
+  mysql_data:
+  redis_data:
+  vendor_bundle:
+  vendor_assets:
   node_modules:
-  public_spree_2_7:
+  public_spree:
 
 services:
   mysql:
@@ -17,15 +17,15 @@ services:
     ports:
       - '33306:3306'
     volumes:
-      - mysql_8_0-data:/var/lib/mysql
-  redis:
-    image: redis:alpine
-    networks:
-      - default
-    ports:
-      - '36379:6379'
-    volumes:
-      - redis-data:/var/lib/redis
+      - mysql_data:/var/lib/mysql
+      redis:
+        image: redis:alpine
+        networks:
+          - default
+        ports:
+          - '36379:6379'
+        volumes:
+          - redis_data:/var/lib/redis
   potepanec:
     build:
       context: .
@@ -47,10 +47,10 @@ services:
       # https://qiita.com/shotat/items/57d049793605ffc20135
       - /potepanec/log
       - /potepanec/tmp
-      - vendor_bundle_2_5_1:/potepanec/vendor/bundle
-      - vendor_assets_2_7:/potepanec/vendor/assets
+      - vendor_bundle:/potepanec/vendor/bundle
+      - vendor_assets:/potepanec/vendor/assets
       - node_modules:/potepanec/node_modules
-      - public_spree_2_7:/potepanec/public/spree
+      - public_spree:/potepanec/public/spree
     tty: true
     stdin_open: true
     command: bundle exec rails server -b 0.0.0.0
