--- a/for_m1_docker/docker-compose.yml
+++ b/for_m1_docker/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3"
 volumes:
-  mysql_8_0-data:
-  redis-data:
-  vendor_bundle_2_5_1:
-  vendor_assets_2_7:
+  mysql_data:
+  vendor_bundle:
   node_modules:
-  public_spree_2_7:
+  public_spree:
+  storage:
 
 services:
   mysql:
@@ -18,15 +17,7 @@ services:
     ports:
       - '33306:3306'
     volumes:
-      - mysql_8_0-data:/var/lib/mysql
-  redis:
-    image: redis:alpine
-    networks:
-      - default
-    ports:
-      - '36379:6379'
-    volumes:
-      - redis-data:/var/lib/redis
+      - mysql_data:/var/lib/mysql
   potepanec:
     build:
       context: .
@@ -37,10 +28,8 @@ services:
       MYSQL_USERNAME: root
       MYSQL_PASSWORD: password
       MYSQL_HOST: mysql
-      REDIS_URL: "redis://redis:6379"
     depends_on:
       - mysql
-      - redis
     networks:
       - default
     volumes:
@@ -48,11 +37,10 @@ services:
       # https://qiita.com/shotat/items/57d049793605ffc20135
       - /potepanec/log
       - /potepanec/tmp
-      - /potepanec/vendor/bundle
-      - vendor_bundle_2_5_1:/potepanec/vendor/bundle
-      - vendor_assets_2_7:/potepanec/vendor/assets
+      - vendor_bundle:/potepanec/vendor/bundle
       - node_modules:/potepanec/node_modules
-      - public_spree_2_7:/potepanec/public/spree
+      - public_spree:/potepanec/public/spree
+      - storage:/potepanec/storage
     tty: true
     stdin_open: true
     command: bundle exec rails server -b 0.0.0.0
