fix/CAMP-794 mysqlコンテナビルド時のエラーを解消

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -9,6 +9,7 @@ services:
       - default
     ports:
       - '33306:3306'
+    command: --default-authentication-plugin=mysql_native_password
   redis:
     image: redis:alpine
     networks:
